[Fix] 23653 [UI校稿] 【Android】體育投注英文頁面，需要修改

--- a/app/src/main/res/layout/home_highlight_item.xml
+++ b/app/src/main/res/layout/home_highlight_item.xml
@@ -201,7 +201,7 @@
             android:contentDescription="@null"
             app:tint="@color/colorGray"
             android:scaleType="centerCrop"
-            android:src="@drawable/icon_chart" />
+            android:src="@drawable/ic_chart" />
 
         <ImageView
             android:id="@+id/btn_star"
