--- a/app/src/main/res/layout/button_odd_detail.xml
+++ b/app/src/main/res/layout/button_odd_detail.xml
@@ -77,6 +77,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/bg_radius_4_button_odds_lock"
         android:gravity="center"
+        android:textSize="@dimen/textSize12sp"
         android:text="@string/unknown_data"
         android:visibility="gone" />
 
