--- a/app/src/main/res/layout/itemview_league_odd_v5.xml
+++ b/app/src/main/res/layout/itemview_league_odd_v5.xml
@@ -8,6 +8,13 @@
     android:orientation="vertical"
     tools:ignore="spUsage,ContentDescription,RtlSymmetry">
 
+    <View
+        android:id="@+id/v_top"
+        android:layout_width="match_parent"
+        android:layout_height="2dp"
+        android:background="@color/colorWhite8"
+        app:layout_constraintTop_toTopOf="parent"/>
+
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guide_content"
         android:layout_width="wrap_content"
@@ -21,7 +28,7 @@
         android:layout_height="228dp"
         android:paddingVertical="2dp"
         app:layout_constraintEnd_toEndOf="@+id/guide_content"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="@+id/v_top">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guide_game_start"
@@ -181,7 +188,7 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="2"
-            android:textColor="@color/colorBlackLight"
+            android:textColor="@color/colorBlack"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBottom_toTopOf="@id/league_odd_match_total_score_home_bottom"
             app:layout_constraintEnd_toEndOf="@id/guide_game_end"
@@ -282,7 +289,7 @@
             android:ellipsize="end"
             android:gravity="center_vertical"
             android:maxLines="2"
-            android:textColor="@color/colorBlackLight"
+            android:textColor="@color/colorBlack"
             android:textSize="@dimen/textSize14sp"
             app:layout_constraintBottom_toTopOf="@id/league_odd_match_total_score_away_bottom"
             app:layout_constraintEnd_toEndOf="@id/guide_game_end"
@@ -393,7 +400,7 @@
             android:layout_height="20dp"
             android:layout_marginEnd="5dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/icon_chart"
+            android:src="@drawable/ic_chart"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/league_odd_match_favorite"
             app:layout_constraintTop_toTopOf="@id/guide_game_bottom"
@@ -424,7 +431,7 @@
         app:layout_constraintBottom_toBottomOf="@+id/cl_game"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="@+id/guide_content"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/v_top"
         tools:itemCount="5"
         tools:listitem="@layout/itemview_odd_btn_2x2_v6" />
 
