[fix] 23656 體育投注投注單頁面，需要修改

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,6 +44,8 @@
     <color name="colorWhite8">#E6E6E6</color>
     <color name="colorWhite9">#F3F3F3</color>
 
+    <color name="colorWhite10">#EDEFF0</color>
+
 
     <color name="colorSilverLight">#CCCCCC</color>
     <color name="colorSilver">#BCBCBC</color>
