--- a/app/src/main/res/layout/view_account_history_next_title_bar.xml
+++ b/app/src/main/res/layout/view_account_history_next_title_bar.xml
@@ -29,13 +29,13 @@
         app:tint="@color/colorBlackLight" />
 
     <TextView
+        android:id="@+id/tv_title"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:gravity="center"
         android:text="@string/bet_num_and_bet_date"
         android:textColor="@color/colorBlackLight"
         android:textSize="@dimen/textSize14sp"
-        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="@id/iv_bg"
         app:layout_constraintTop_toTopOf="parent" />
 
