--- a/app/src/main/res/layout/content_left_menu_item_header.xml
+++ b/app/src/main/res/layout/content_left_menu_item_header.xml
@@ -31,7 +31,8 @@
             android:minHeight="48dp"
             android:paddingHorizontal="10dp"
             android:text="@string/go_back_home_page"
-            android:textColor="@color/colorBlackLight" />
+            android:textColor="@color/colorBlackLight"
+            android:textSize="@dimen/textSize14sp" />
 
     </LinearLayout>
 
@@ -67,7 +68,8 @@
             android:minHeight="48dp"
             android:paddingHorizontal="10dp"
             android:text="@string/recharge"
-            android:textColor="@color/colorBlackLight" />
+            android:textColor="@color/colorBlackLight"
+            android:textSize="@dimen/textSize14sp" />
 
     </LinearLayout>
 
@@ -96,7 +98,8 @@
             android:minHeight="48dp"
             android:paddingHorizontal="10dp"
             android:text="@string/withdraw"
-            android:textColor="@color/colorBlackLight" />
+            android:textColor="@color/colorBlackLight"
+            android:textSize="@dimen/textSize14sp" />
 
     </LinearLayout>
 
@@ -125,7 +128,8 @@
             android:minHeight="48dp"
             android:paddingHorizontal="10dp"
             android:text="@string/member_level"
-            android:textColor="@color/colorBlackLight" />
+            android:textColor="@color/colorBlackLight"
+            android:textSize="@dimen/textSize14sp" />
 
     </LinearLayout>
 
@@ -154,7 +158,8 @@
             android:minHeight="48dp"
             android:paddingHorizontal="10dp"
             android:text="@string/promotion"
-            android:textColor="@color/colorBlackLight" />
+            android:textColor="@color/colorBlackLight"
+            android:textSize="@dimen/textSize14sp" />
 
     </LinearLayout>
 
@@ -191,7 +196,8 @@
             android:minHeight="48dp"
             android:paddingHorizontal="10dp"
             android:text="@string/match_type_row_in_play"
-            android:textColor="@color/colorBlackLight" />
+            android:textColor="@color/colorBlackLight"
+            android:textSize="@dimen/textSize14sp" />
 
     </LinearLayout>
 
@@ -223,7 +229,8 @@
             android:minHeight="48dp"
             android:paddingHorizontal="10dp"
             android:text="@string/premium_odds"
-            android:textColor="@color/colorBlackLight" />
+            android:textColor="@color/colorBlackLight"
+            android:textSize="@dimen/textSize14sp" />
 
     </LinearLayout>
 
