--- a/app/src/main/res/layout/item_left_special_item.xml
+++ b/app/src/main/res/layout/item_left_special_item.xml
@@ -1,8 +1,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/layoutNotification"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/layoutNotification"
     android:orientation="vertical">
 
     <LinearLayout
@@ -31,7 +31,8 @@
             android:minHeight="48dp"
             android:paddingHorizontal="10dp"
             android:text="@string/match_type_row_in_play"
-            android:textColor="@color/colorBlackLight" />
+            android:textColor="@color/colorBlackLight"
+            android:textSize="@dimen/textSize14sp" />
 
     </LinearLayout>
 
