--- a/app/src/main/res/layout/activity_switch_language.xml
+++ b/app/src/main/res/layout/activity_switch_language.xml
@@ -64,8 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/text_chose_language"
-                android:textColor="@color/colorBlackLight"
-                android:textStyle="bold" />
+                android:textColor="@color/colorBlackLight" />
 
             <ImageView
                 android:layout_width="@dimen/margin_16"
