--- a/app/src/main/res/layout/item_publicity_recommend.xml
+++ b/app/src/main/res/layout/item_publicity_recommend.xml
@@ -27,6 +27,6 @@
         android:id="@+id/SpaceItemDecorationView"
         android:layout_width="match_parent"
         android:layout_height="8dp"
-        android:background="@color/colorWhite" />
+        android:background="@color/color_191919_FCFCFC" />
 
 </LinearLayout>
