--- a/app/src/main/res/layout/home_game_table_item_4.xml
+++ b/app/src/main/res/layout/home_game_table_item_4.xml
@@ -37,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:textColor="@color/colorRed"
+        android:textColor="@color/colorRedLight"
         android:textSize="18dp"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="@id/tv_game_type"
