--- a/app/src/main/res/layout/home_highlight_item.xml
+++ b/app/src/main/res/layout/home_highlight_item.xml
@@ -64,7 +64,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="@dimen/textSize18sp"
-            android:textColor="@color/colorRed"
+            android:textColor="@color/colorRedLight"
             android:visibility="gone"/>
 
         <TextView
