--- a/app/src/main/res/layout/home_recommend_item.xml
+++ b/app/src/main/res/layout/home_recommend_item.xml
@@ -13,7 +13,7 @@
         android:id="@+id/testId"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/colorRed"
+        android:textColor="@color/colorRedLight"
         android:gravity="center"
         android:textSize="@dimen/margin_36"
         android:visibility="gone"/>
