--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,7 +75,8 @@
                 app:iconSignifier="@drawable/ic_login_account"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/label_register"
-                app:singleText="@string/member_account">
+                app:labelText="@string/member_account"
+                app:hintText="@string/account_hint">
 
                 <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
                     android:id="@+id/eet_account"
@@ -83,7 +84,6 @@
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
                     android:inputType="text"
-                    android:hint="@string/account_hint"
                     android:maxLines="1"
                     android:textColor="@color/colorBlackLight"
                     android:textSize="@dimen/textSize14sp"
@@ -102,14 +102,14 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/et_account"
-                app:singleText="@string/login_password">
+                app:labelText="@string/login_password"
+                app:hintText="@string/password_hint">
 
                 <org.cxct.sportlottery.widget.boundsEditText.ExtendedEditText
                     android:id="@+id/eet_password"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:imeOptions="actionNext"
-                    android:hint="@string/password_hint"
                     android:inputType="textPassword"
                     android:maxLines="1"
                     android:textSize="@dimen/textSize14sp"
