--- a/app/src/main/res/drawable/bg_frame_blue_16.xml
+++ b/app/src/main/res/drawable/bg_frame_blue_16.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:width="208dp" android:height="32dp">
         <shape android:shape="rectangle">
-            <stroke android:width="1dp" android:color="#ff0f53af" />
+            <stroke android:width="1dp" android:color="@color/colorBlue" />
             <corners android:radius="16dp" />
         </shape>
     </item>
