--- a/app/src/main/res/layout/view_game_tab_odd_v4.xml
+++ b/app/src/main/res/layout/view_game_tab_odd_v4.xml
@@ -17,6 +17,7 @@
         app:tabMode="fixed"
         app:tabRippleColor="@null"
         app:tabSelectedTextColor="@color/colorBlue"
+        app:tabIndicatorFullWidth="false"
         app:tabTextAppearance="@style/TabTextSize"
         app:tabTextColor="@color/colorGray">
 
