[fix] 23659 體育投注聯賽頁面需修改

--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -83,6 +83,7 @@
                     tools:layout="@layout/fragment_home" />
 
                 <Button
+                    android:layout_margin="8dp"
                     android:id="@+id/game_submit"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
