--- a/app/src/main/res/layout/bottom_navigation_item.xml
+++ b/app/src/main/res/layout/bottom_navigation_item.xml
@@ -24,7 +24,7 @@
     <TextView
         android:id="@+id/item_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="14.4dp"
         android:layout_marginTop="2dp"
         android:layout_marginBottom="5dp"
         android:includeFontPadding="false"
