--- a/app/src/main/res/layout/itemview_match_category_v4.xml
+++ b/app/src/main/res/layout/itemview_match_category_v4.xml
@@ -11,11 +11,12 @@
         android:layout_width="16dp"
         android:layout_height="16dp"
         android:layout_marginStart="20dp"
-        android:src="@drawable/ic_icon_today"
+        android:src="@drawable/ic_icon_today_w"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        app:tint="@color/colorGray" />
 
     <TextView
         android:id="@+id/match_category_name"
