[fix] 補強23644 與相關返回鍵樣式

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -23,6 +23,8 @@
         android:layout_height="20dp"
         android:layout_marginStart="24dp"
         android:background="@null"
+        android:scaleX="0.9"
+        android:scaleY="0.9"
         android:contentDescription="@null"
         android:src="@drawable/ic_arrow_login"
         app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
@@ -185,9 +187,9 @@
                 android:id="@+id/cb_remember_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="6dp"
+                android:paddingStart="6dp"
                 android:button="@drawable/effect_login_select_checkbox"
-                android:padding="4dp"
                 android:text="@string/remember_password"
                 android:textColor="@color/colorBlackLight"
                 android:textSize="@dimen/textSize13sp"
@@ -199,7 +201,7 @@
                 android:id="@+id/btn_forget_password"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="12dp"
+                android:layout_marginTop="6dp"
                 android:background="@null"
                 android:clickable="true"
                 android:focusable="true"
