--- a/app/src/main/res/layout/activity_phone_verify.xml
+++ b/app/src/main/res/layout/activity_phone_verify.xml
@@ -21,14 +21,17 @@
 
     <ImageButton
         android:id="@+id/btn_back"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
-        android:layout_margin="16dp"
+        android:layout_width="26dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="24dp"
         android:background="@null"
+        android:scaleX="0.9"
+        android:scaleY="0.9"
         android:contentDescription="@null"
         android:src="@drawable/ic_arrow_login"
+        app:layout_constraintBottom_toBottomOf="@+id/ivLogo"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="@+id/ivLogo" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
