--- a/app/src/main/res/layout/bottom_navigation_item.xml
+++ b/app/src/main/res/layout/bottom_navigation_item.xml
@@ -24,12 +24,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="5dp"
-        android:maxLines="1"
         android:gravity="center"
         android:includeFontPadding="false"
+        android:maxLines="1"
         android:textColor="@color/selector_blue_gray_light"
-        app:autoSizeMaxTextSize="@dimen/textSize12sp"
-        app:autoSizeMinTextSize="@dimen/textSize8sp"
+        android:textSize="@dimen/textSize11sp"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -39,15 +38,15 @@
 
     <TextView
         android:id="@+id/trans_number"
-        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="top|end"
         android:layout_margin="3dp"
         android:textColor="@color/selector_blue_gray_light"
         android:textSize="@dimen/textSize12sp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:text="123"
         tools:visibility="visible" />
 
