--- a/app/src/main/res/layout/home_game_highlight_bar.xml
+++ b/app/src/main/res/layout/home_game_highlight_bar.xml
@@ -24,8 +24,7 @@
         android:text="@string/label_highlight"
         android:textAllCaps="true"
         android:textColor="@color/colorBlue"
-        android:textSize="@dimen/textSize16sp"
-        android:textStyle="bold" />
+        android:textSize="@dimen/textSize16sp"/>
 
     <View
         android:layout_width="0dp"
