--- a/app/src/main/res/layout/view_toolbar_main.xml
+++ b/app/src/main/res/layout/view_toolbar_main.xml
@@ -13,12 +13,12 @@
 
     <ImageView
         android:id="@+id/iv_logo"
-        android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_16"
         android:layout_marginTop="@dimen/margin_4"
         android:layout_marginBottom="@dimen/margin_4"
+        android:layout_weight="1"
         android:adjustViewBounds="true"
         android:contentDescription="@null"
         android:scaleType="fitStart"
@@ -66,10 +66,11 @@
     <ImageView
         android:id="@+id/iv_notice"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="20dp"
+        android:scaleType="centerInside"
         android:src="@drawable/icon_bell"
         android:visibility="gone"
-        tools:visibility="visible"/>
+        tools:visibility="visible" />
 
     <TextView
         android:id="@+id/btn_notice"
@@ -118,10 +119,11 @@
 
     <ImageView
         android:id="@+id/iv_menu"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginStart="12dp"
         android:layout_marginEnd="15dp"
+        android:scaleType="centerInside"
         android:src="@drawable/ic_menu"
         android:visibility="gone"
         tools:visibility="visible" />
