--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,6 +2,7 @@
 <resources>
     <dimen name="tool_bar_height">48dp</dimen>
 
+    <dimen name="textSize7sp">7dp</dimen>
     <dimen name="textSize8sp">8dp</dimen>
     <dimen name="textSize10sp">10dp</dimen>
     <dimen name="textSize11sp">11dp</dimen>
