--- a/app/src/main/res/layout/fragment_bank_card.xml
+++ b/app/src/main/res/layout/fragment_bank_card.xml
@@ -100,7 +100,7 @@
                         android:layout_height="20dp"
                         android:layout_marginStart="10dp"
                         android:layout_marginEnd="12dp"
-                        android:background="@color/colorSilver" />
+                        android:background="@color/colorWhite6" />
 
                     <ImageView
                         android:id="@+id/iv_bank_icon"
@@ -122,8 +122,8 @@
 
                     <ImageView
                         android:id="@+id/imageView"
-                        android:layout_width="14dp"
-                        android:layout_height="14dp"
+                        android:layout_width="16dp"
+                        android:layout_height="16dp"
                         android:layout_marginEnd="6dp"
                         android:src="@drawable/ic_arrow_down_gray" />
 
