--- a/app/src/main/res/layout/sport_bottom_navigation.xml
+++ b/app/src/main/res/layout/sport_bottom_navigation.xml
@@ -28,14 +28,14 @@
 
     <FrameLayout
         android:layout_width="67dp"
-        android:layout_height="match_parent"
-        android:background="@color/colorBlue">
+        android:layout_height="match_parent">
 
         <LinearLayout
             android:id="@+id/item_bet_list"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:background="@color/colorBlue"
             android:orientation="vertical">
 
             <TextView
@@ -43,24 +43,23 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
-                android:text="0"
                 android:layout_marginTop="6dp"
                 android:includeFontPadding="false"
+                android:text="0"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/textSize22sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
                 android:layout_marginBottom="5dp"
                 android:gravity="center"
-                android:maxLines="1"
-                android:layout_gravity="center_horizontal"
-                android:text="@string/bet_info_list_title"
                 android:includeFontPadding="false"
+                android:maxLines="1"
+                android:text="@string/bet_info_list_title"
                 android:textColor="@android:color/white"
-                app:autoSizeMaxTextSize="@dimen/textSize11sp"
-                app:autoSizeMinTextSize="@dimen/textSize7sp"
+                android:textSize="@dimen/textSize11sp"
                 app:autoSizeTextType="uniform" />
         </LinearLayout>
 
