--- a/app/src/main/res/drawable/bg_radius_4_button_white_silver_dark.xml
+++ b/app/src/main/res/drawable/bg_radius_4_button_white_silver_dark.xml
@@ -2,5 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <corners android:radius="4dp" />
-    <solid android:color="@color/color_ff9200" />
+    <stroke
+        android:width="1dp"
+        android:color="@color/color_404040" />
+    <solid android:color="@color/color_191919" />
 </shape>
